--- a/references.ipynb
+++ b/references.ipynb
@@ -24,6 +24,10 @@
     "    * ISLR Python https://github.com/JWarmenhoven/ISLR-python\n",
     "* Deep learning https://keras.io/\n",
     "\n",
+    "### Graphing\n",
+    "* Seaborn https://stanford.edu/~mwaskom/software/seaborn/index.html\n",
+    "* Tableau http://www.tableau.com/academic/students\n",
+    "\n",
     "### Management\n",
     "* IDE \n",
     "    * http://jupyter.org/ \n",
@@ -68,6 +72,7 @@
     "    * http://a16z.com/2016/06/10/ai-deep-learning-machines/\n",
     "    * https://keras.io/\n",
     "    * https://github.com/dmlc/mxnet\n",
+    "    * https://www.udacity.com/course/deep-learning--ud730\n",
     "* (Deep) reinforcement learning\n",
     "    * https://gym.openai.com/\n",
     "    * https://github.com/coreylynch/async-rl\n",
@@ -99,10 +104,11 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -114,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
